fix: fix firefox bag with extra padding in select text

--- a/assets/stylesheet/common.scss
+++ b/assets/stylesheet/common.scss
@@ -31,3 +31,11 @@ a {
 .hidden {
   display: none;
 }
+
+/* remove padding/text indentation of native select
+   Firefox: */
+@-moz-document url-prefix() {
+  select {
+    text-indent: -2px;
+  }
+}
