--- a/assets/stylesheet/forms.scss
+++ b/assets/stylesheet/forms.scss
@@ -59,7 +59,7 @@
   }
 
   &__select {
-    padding: 0.72rem 2.4rem 0.72rem 0.8rem;
+    padding: 0.72rem 2.4rem 0.72rem 1.2rem;
     border: 1px solid $color-dark-border;
     font-family: inherit;
     font-size: 1.6rem;
@@ -72,6 +72,7 @@
     }
 
     &:focus {
+      border-color: transparent;
       box-shadow: 0 0 0 1px $color-link;
     }
 
